# c2switcher

./: .gitignore  LICENSE  README.md  c2claude  c2switcher.py  pyproject.toml  requirements.txt  setup.sh  testlb.py
.github/workflows/: ci.yml
c2switcher/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.py  database.py  load_balancer.py  locking.py  sandbox.py  sessions.py  tokens.py  usage.py  utils.py
c2switcher/core/: errors.py  load_balancing.py  models.py
c2switcher/data/: credential_store.py  store.py
c2switcher/infrastructure/: api.py  factory.py  locking.py  oauth.py
c2switcher/presentation/: renderers.py
c2switcher/presentation/cli/: __init__.py  accounts.py  login.py  reports.py  sessions_cmd.py  switching.py  usage_cmd.py
c2switcher/reports/: __init__.py  sessions.py  usage.py
c2switcher/services/: accounts.py  reporting.py  sessions.py  switching.py
plasmoid/: README.md
plasmoid/contents/ui/: AccountCard.qml  UsageBar.qml  UsageIndicator.qml  main.qml
